<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SecondActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1C5A8C"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="" />

        <TextView
            android:id="@+id/toolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:text="@string/Education_Page"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="120dp"
            android:contentDescription="@string/Home_Page"
            android:padding="2dp"
            android:src="@drawable/ic_school_24"
            app:layout_constraintEnd_toEndOf="@+id/toolbarText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/myToolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />


        <Button
            android:id="@+id/Skillsbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/ocean_blue"
            android:text="@string/Skills_Page"
            app:layout_constraintBottom_toTopOf="@+id/Copyright"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toEndOf="@+id/Homebutton"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/Homebutton"
            android:layout_width="86dp"
            android:layout_height="52dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/ocean_blue"
            android:gravity="center_horizontal|top"
            android:paddingLeft="32sp"
            android:text=""
            app:icon="@drawable/ic_house_24"
            app:layout_constraintBottom_toTopOf="@+id/Copyright"
            app:layout_constraintEnd_toStartOf="@+id/Skillsbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="Dorset College"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="55dp"
            android:contentDescription="@string/Home_Page"
            android:foregroundGravity="center"
            android:src="@drawable/dorsetimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Header" />

        <TextView
            android:id="@+id/Copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Copyrights"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Education_Intro"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Education_Intro2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toTopOf="@+id/photo1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <ImageView
            android:id="@+id/photo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/Home_Page"
            android:foregroundGravity="center"
            android:src="@drawable/ulbra"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/Extra_Education"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/Edification"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>